<resources>
    <string name="app_name">Course Project</string>

    <string name="events_tab">Мероприятия</string>
    <string name="courses_tab">Мои курсы</string>
    <string name="profile_tab">Профиль</string>

    <string name="edit_action">Редактировать</string>
    <string name="save_action">Сохранить</string>
    <string name="cancel_action">Отменить</string>
    <string name="leave_action">Уйти</string>
    <string name="stay_action">Остаться</string>
    <string name="login_action">Войти</string>
    <string name="search_action">Найти</string>
    <string name="sort_by_name_action">По имени</string>
    <string name="sort_by_points_action">По баллам</string>

    <!--temp strings-->
    <string name="list_rearrangement_action">Перестроить</string>
    <string name="list_item_adding_action">Добавить</string>
    <string name="list_item_removing_action">Удалить</string>
    <string name="list_mixing_action">Перемешать</string>

    <string name="events_toolbar_title">Мероприятия</string>
    <string name="courses_toolbar_title">Мои курсы</string>
    <string name="profile_toolbar_title">Профиль</string>
    <string name="profile_editing_toolbar_title">Редактирование профиля</string>
    <string name="academic_performance_toolbar_title">Успеваемость</string>
    <string name="lectures_toolbar_title">Лекции</string>

    <string name="name_label">Имя:</string>
    <string name="surname_label">Фамилия:</string>
    <string name="patronymic_label">Отчество:</string>
    <string name="academic_performance_label">Успеваемость</string>
    <string name="rating_label">Рейтинг</string>
    <string name="passed_courses_label">Пройденные курсы</string>
    <string name="actual_events_label">Актуальное</string>
    <string name="past_events_label">Прошедшие</string>
    <string name="details_label">ДЕТАЛИ</string>
    <string name="general_rating_label">Общий рейтинг</string>
    <string name="passed_tests_label">Пройдено тестов</string>
    <string name="done_homework_label">Выполнено Д/З</string>
    <string name="past_lessons_label">Прошло</string>
    <string name="remaining_lessons_label">Осталось</string>
    <string name="plaсeholder_label">Здесь пока ничего нет :(</string>

    <string name="name_hint">Не указано</string>
    <string name="surname_hint">Не указано</string>
    <string name="patronymic_hint">Не указано</string>
    <string name="input_email_hint">Ваша почта</string>
    <string name="input_password_hint">Ваш пароль</string>
    <string name="deadline_date_hint">Дедлайна нет</string>

    <string name="action_confirmation_message">Если уйти с экрана редактирования, изменения не сохранятся. Уйти?</string>
    <string name="empty_input_message">Все поля должны быть заполнены</string>
    <string name="incorrect_input_message">В ФИО могут быть только буквы, причем первая должна быть заглавной</string>
    <string name="incorrect_authorization_data_message">Неправильный адрес электронной почты или пароль</string>
    <string name="incorrect_input_email_message">Некорректный адрес электронной почты</string>
    <string name="incorrect_input_password_message">Пароль должен содержать не менее 8 символов</string>
    <string name="permission_read_contacts_message">Нет разрешения на чтение контактов</string>
    <string name="no_internet_message">Нет подключения к интернету</string>
    <string name="not_ok_status_message">Ошибка при обновлении данных</string>

    <plurals name="numberOfPoints">
        <item quantity="one">"%.2f балл"</item>
        <item quantity="few">%.2f балла</item>
        <item quantity="other">%.2f баллов</item>
    </plurals>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
