<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="6dp"
    app:cardCornerRadius="5dp"
    tools:context=".ui.courses.AcademicPerformanceFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:id="@+id/academic_performance_label"
                style="@style/BoldTextStyle"
                android:text="@string/rating_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/details_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_label"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/points_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/points_field"
                    style="@style/BoldTextStyle"
                    android:text="182" />

                <TextView
                    android:id="@+id/points_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="балла" />
            </LinearLayout>

            <TextView
                android:id="@+id/general_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:drawableEnd="@drawable/ic_adb_black_24dp"
                android:text="@string/general_rating_label"
                app:layout_constraintBottom_toBottomOf="@id/general_rating_field"
                app:layout_constraintStart_toEndOf="@id/points_layout" />

            <TextView
                android:id="@+id/passed_tests_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/passed_tests_label"
                app:layout_constraintBottom_toBottomOf="@id/passed_tests_field"
                app:layout_constraintStart_toEndOf="@id/points_layout" />

            <TextView
                android:id="@+id/done_homework_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/done_homework_label"
                app:layout_constraintBottom_toBottomOf="@id/done_homework_field"
                app:layout_constraintStart_toEndOf="@id/points_layout" />

            <TextView
                android:id="@+id/general_rating_field"
                style="@style/BoldTextStyle"
                android:text="2/30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passed_tests_field"
                style="@style/BoldTextStyle"
                android:text="15/18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/general_rating_field" />

            <TextView
                android:id="@+id/done_homework_field"
                style="@style/BoldTextStyle"
                android:text="12/18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passed_tests_field" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/lessons_number_field"
                style="@style/BoldTextStyle"
                android:text="20 занятий"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lessons_number_field" />

            <TextView
                android:id="@+id/past_lessons_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_lessons_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar" />

            <TextView
                android:id="@+id/past_lessons_number_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="10 занятий"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/past_lessons_number_label" />

            <TextView
                android:id="@+id/remaining_lessons_number_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_lessons_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar" />

            <TextView
                android:id="@+id/remaining_lessons_number_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="10 занятий"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/remaining_lessons_number_label" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>